@@ -14,6 +14,7 @@ import static org.opensmartgridplatform.dto.valueobjects.smartmetering.AmrProfil
 import static org.opensmartgridplatform.dto.valueobjects.smartmetering.AmrProfileStatusCodeFlagDto.POWER_DOWN;
 import static org.opensmartgridplatform.dto.valueobjects.smartmetering.AmrProfileStatusCodeFlagDto.RECOVERED_VALUE;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
@@ -22,10 +23,14 @@ import java.util.GregorianCalendar;
 import java.util.List;
 import java.util.TimeZone;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import org.assertj.core.util.Lists;
 import org.joda.time.DateTimeZone;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.openmuc.jdlms.AttributeAddress;
 import org.openmuc.jdlms.ObisCode;
@@ -62,20 +67,25 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   private DlmsConnectionStub connectionStub;
 
   private final ObisCode OBIS_DAILY_DSMR4 = new ObisCode("1.0.99.2.0.255");
-  private final ObisCode OBIS_INTERVAL_DSMR4 = new ObisCode("0.1.24.3.0.255");
   private final ObisCode OBIS_MONTHLY_DSMR4 = new ObisCode("0.0.98.1.0.255");
+  private final String OBIS_INTERVAL_DSMR4 = "0.<c>.24.3.0.255";
 
-  private final ObisCode OBIS_DAILY_SMR5 = new ObisCode("0.1.24.3.1.255");
-  private final ObisCode OBIS_INTERVAL_SMR5 = new ObisCode("0.1.24.3.0.255");
-  private final ObisCode OBIS_MONTHLY_SMR5 = new ObisCode("0.1.24.3.2.255");
+  private final String OBIS_DAILY_SMR5 = "0.<c>.24.3.1.255";
+  private final String OBIS_INTERVAL_SMR5 = "0.<c>.24.3.0.255";
+  private final String OBIS_MONTHLY_SMR5 = "0.<c>.24.3.2.255";
 
   private final ObisCode OBIS_CLOCK = new ObisCode("0.0.1.0.0.255");
   private final ObisCode OBIS_STATUS = new ObisCode("0.0.96.10.2.255");
-  private final ObisCode OBIS_GAS_VALUE_DSMR4 = new ObisCode("0.1.24.2.1.255");
-  private final ObisCode OBIS_GAS_VALUE_SMR5 = new ObisCode("0.1.24.2.2.255");
+  private final String OBIS_GAS_VALUE_SMR5 = "0.<c>.24.2.2.255";
+  private final ObisCode OBIS_ACTIVE_ENERGY_IMPORT_RATE_1 = new ObisCode("1.0.1.8.1.255");
+  private final ObisCode OBIS_ACTIVE_ENERGY_IMPORT_RATE_2 = new ObisCode("1.0.1.8.2.255");
+  private final ObisCode OBIS_ACTIVE_ENERGY_EXPORT_RATE_1 = new ObisCode("1.0.2.8.1.255");
+  private final ObisCode OBIS_ACTIVE_ENERGY_EXPORT_RATE_2 = new ObisCode("1.0.2.8.2.255");
+  private final String OBIS_GAS_VALUE_DSMR4 = "0.<c>.24.2.1.255";
 
   private final int CLASS_ID_CLOCK = 8;
   private final int CLASS_ID_DATA = 1;
+  private final int CLASS_ID_REGISTER = 3;
   private final int CLASS_ID_EXTENDED_REGISTER = 4;
   private final int CLASS_ID_PROFILE = 7;
 
@@ -98,22 +108,6 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
                   DataObject.newOctetStringData(this.OBIS_STATUS.bytes()),
               DataObject.newInteger8Data(this.ATTR_ID_VALUE), DataObject.newUInteger16Data(0)));
 
-  private final DataObject GAS_VALUE_DSMR4 =
-      DataObject.newStructureData(
-          Arrays.asList(
-              DataObject.newUInteger16Data(this.CLASS_ID_EXTENDED_REGISTER),
-              DataObject.newOctetStringData(this.OBIS_GAS_VALUE_DSMR4.bytes()),
-              DataObject.newInteger8Data(this.ATTR_ID_VALUE),
-              DataObject.newUInteger16Data(0)));
-
-  private final DataObject GAS_CAPTURE_TIME_DSMR4 =
-      DataObject.newStructureData(
-          Arrays.asList(
-              DataObject.newUInteger16Data(this.CLASS_ID_EXTENDED_REGISTER),
-              DataObject.newOctetStringData(this.OBIS_GAS_VALUE_DSMR4.bytes()),
-              DataObject.newInteger8Data(this.ATTR_ID_CAPTURE_TIME),
-              DataObject.newUInteger16Data(0)));
-
   private Date TIME_FROM;
   private Date TIME_TO;
   private DataObject PERIOD_1_CLOCK;
@@ -129,6 +123,9 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
 
   private final long PERIOD_1_LONG_VALUE = 1000L;
   private final long PERIOD_2_LONG_VALUE = 1500L;
+
+  private final long PERIOD_1_LONG_VALUE_E = 33L;
+  private final long PERIOD_2_LONG_VALUE_E = 44L;
 
   private final short PERIOD1_AMR_STATUS_VALUE = 0x0F; // First 4 status bits set
   private final short PERIOD2_AMR_STATUS_VALUE = 0xF0; // Last 4 status bits set
@@ -182,43 +179,62 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
         new GregorianCalendar(2019, Calendar.FEBRUARY, 1, 0, 0).getTime();
   }
 
-  @Test
-  void testExecuteDsmr4() throws Exception {
-    for (final PeriodTypeDto type : PeriodTypeDto.values()) {
-      this.testExecute(Protocol.DSMR_4_2_2, type, false);
-    }
+  private static Stream<Arguments> combinePeriodTypesWithChannels() {
+    return Arrays.stream(PeriodTypeDto.values())
+        .map(GetPeriodicMeterReadsGasCommandExecutorIntegrationTest::combineWithChannels)
+        .flatMap(List::stream);
   }
 
-  @Test
-  void testExecuteSmr5_0() throws Exception {
-    for (final PeriodTypeDto type : PeriodTypeDto.values()) {
-      this.testExecute(Protocol.SMR_5_0_0, type, false);
-    }
+  private static List<Arguments> combineWithChannels(final PeriodTypeDto periodType) {
+    final List<Integer> channels = Lists.newArrayList(1, 2, 3, 4);
+    return channels.stream().map(channel -> Arguments.of(periodType, channel)).toList();
   }
 
-  @Test
-  void testExecuteSmr5_0_WithNullData() throws Exception {
-    for (final PeriodTypeDto type : PeriodTypeDto.values()) {
-      this.testExecute(Protocol.SMR_5_0_0, type, true);
-    }
+  @ParameterizedTest
+  @MethodSource("combinePeriodTypesWithChannels")
+  void testExecuteDsmr4NoSelectiveAccess(final PeriodTypeDto type, final int channel)
+      throws Exception {
+    this.testExecute(Protocol.DSMR_4_2_2, type, false, false, channel);
   }
 
-  @Test
-  void testExecuteSmr5_1() throws Exception {
-    for (final PeriodTypeDto type : PeriodTypeDto.values()) {
-      this.testExecute(Protocol.SMR_5_1, type, false);
-    }
+  @ParameterizedTest
+  @MethodSource("combinePeriodTypesWithChannels")
+  void testExecuteDsmr4(final PeriodTypeDto type, final int channel) throws Exception {
+    this.testExecute(Protocol.DSMR_4_2_2, type, false, true, channel);
   }
 
-  @Test
-  void testExecuteSmr5_1_WithNullData() throws Exception {
-    for (final PeriodTypeDto type : PeriodTypeDto.values()) {
-      this.testExecute(Protocol.SMR_5_1, type, true);
-    }
+  @ParameterizedTest
+  @MethodSource("combinePeriodTypesWithChannels")
+  void testExecuteSmr5_0(final PeriodTypeDto type, final int channel) throws Exception {
+    this.testExecute(Protocol.SMR_5_0_0, type, false, true, channel);
+  }
+
+  @ParameterizedTest
+  @MethodSource("combinePeriodTypesWithChannels")
+  void testExecuteSmr5_0_WithNullData(final PeriodTypeDto type, final int channel)
+      throws Exception {
+    this.testExecute(Protocol.SMR_5_0_0, type, true, true, channel);
+  }
+
+  @ParameterizedTest
+  @MethodSource("combinePeriodTypesWithChannels")
+  void testExecuteSmr5_1(final PeriodTypeDto type, final int channel) throws Exception {
+    this.testExecute(Protocol.SMR_5_1, type, false, true, channel);
+  }
+
+  @ParameterizedTest
+  @MethodSource("combinePeriodTypesWithChannels")
+  void testExecuteSmr5_1_WithNullData(final PeriodTypeDto type, final int channel)
+      throws Exception {
+    this.testExecute(Protocol.SMR_5_1, type, true, true, channel);
   }
 
   private void testExecute(
-      final Protocol protocol, final PeriodTypeDto type, final boolean useNullData)
+      final Protocol protocol,
+      final PeriodTypeDto type,
+      final boolean useNullData,
+      final boolean selectiveAccessPeriodicMeterReadsSupported,
+      final int channel)
       throws Exception {
 
     // SETUP
@@ -229,21 +245,29 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
     this.connectionStub.clearRequestedAttributeAddresses();
 
     // Create device with requested protocol version
-    final DlmsDevice device = this.createDlmsDevice(protocol);
+    final DlmsDevice device =
+        this.createDlmsDevice(protocol, selectiveAccessPeriodicMeterReadsSupported);
 
     // Create request object
     final PeriodicMeterReadsRequestDto request =
         new PeriodicMeterReadsRequestDto(
-            type, this.TIME_FROM, this.TIME_TO, ChannelDto.fromNumber(1));
+            type, this.TIME_FROM, this.TIME_TO, ChannelDto.fromNumber(channel));
 
     // Get expected values
     final AttributeAddress expectedAddressProfile =
-        this.createAttributeAddress(protocol, type, this.TIME_FROM, this.TIME_TO, device);
+        this.createAttributeAddress(protocol, type, this.TIME_FROM, this.TIME_TO, device, channel);
     final List<AttributeAddress> expectedScalerUnitAddresses =
-        this.getScalerUnitAttributeAddresses(protocol);
+        this.getScalerUnitAttributeAddresses(
+            protocol, selectiveAccessPeriodicMeterReadsSupported, channel);
 
     // Set response in stub
-    this.setResponseForProfile(expectedAddressProfile, protocol, type, useNullData);
+    this.setResponseForProfile(
+        expectedAddressProfile,
+        protocol,
+        type,
+        useNullData,
+        selectiveAccessPeriodicMeterReadsSupported,
+        channel);
     this.setResponsesForScalerUnit(expectedScalerUnitAddresses);
 
     // CALL
@@ -255,14 +279,18 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
     // Get resulting requests from connection stub
     final List<AttributeAddress> requestedAttributeAddresses =
         this.connectionStub.getRequestedAttributeAddresses();
-    assertThat(requestedAttributeAddresses).hasSize(2);
+    if (selectiveAccessPeriodicMeterReadsSupported || type == PeriodTypeDto.INTERVAL) {
+      assertThat(requestedAttributeAddresses).hasSize(2);
+    } else {
+      assertThat(requestedAttributeAddresses).hasSize(9);
+    }
 
     // There should be 1 request to the buffer (id = 2) of a profile
     // (class-id = 7)
     final AttributeAddress actualAttributeAddressProfile =
         requestedAttributeAddresses.stream()
             .filter(a -> a.getClassId() == this.CLASS_ID_PROFILE)
-            .collect(Collectors.toList())
+            .toList()
             .get(0);
 
     AttributeAddressAssert.is(actualAttributeAddressProfile, expectedAddressProfile);
@@ -273,10 +301,15 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
         requestedAttributeAddresses.stream()
             .filter(
                 a ->
-                    a.getClassId() == this.CLASS_ID_EXTENDED_REGISTER
+                    (a.getClassId() == this.CLASS_ID_EXTENDED_REGISTER
+                            || a.getClassId() == this.CLASS_ID_REGISTER)
                         && a.getId() == this.ATTR_ID_SCALER_UNIT)
             .collect(Collectors.toList());
-    assertThat(attributeAddressesScalerUnit).hasSize(1);
+    if (selectiveAccessPeriodicMeterReadsSupported || type == PeriodTypeDto.INTERVAL) {
+      assertThat(attributeAddressesScalerUnit).hasSize(1);
+    } else {
+      assertThat(attributeAddressesScalerUnit).hasSize(8);
+    }
 
     // Check response
     assertThat(response.getPeriodType()).isEqualTo(type);
@@ -286,14 +319,17 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
     assertThat(periodicMeterReads).hasSize(AMOUNT_OF_PERIODS);
 
     this.checkClockValues(periodicMeterReads, type, useNullData);
-    this.checkValues(periodicMeterReads);
+    this.checkValues(periodicMeterReads, channel);
     this.checkAmrStatus(periodicMeterReads, protocol, type);
   }
 
-  private DlmsDevice createDlmsDevice(final Protocol protocol) {
+  private DlmsDevice createDlmsDevice(
+      final Protocol protocol, final boolean selectiveAccessPeriodicMeterReadsSupported) {
     final DlmsDevice device = new DlmsDevice();
     device.setProtocol(protocol);
     device.setSelectiveAccessSupported(true);
+    device.setSelectiveAccessPeriodicMeterReadsSupported(
+        selectiveAccessPeriodicMeterReadsSupported);
     return device;
   }
 
@@ -302,7 +338,8 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
       final PeriodTypeDto type,
       final Date timeFrom,
       final Date timeTo,
-      final DlmsDevice device)
+      final DlmsDevice device,
+      final int channel)
       throws Exception {
     final DataObject from =
         this.dlmsHelper.asDataObject(
@@ -313,19 +350,21 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
 
     if (protocol == Protocol.DSMR_4_2_2) {
       if (type == PeriodTypeDto.DAILY) {
-        return this.createAttributeAddressDsmr4Daily(from, to);
+        return this.createAttributeAddressDsmr4Daily(
+            from, to, device.isSelectiveAccessPeriodicMeterReadsSupported(), channel);
       } else if (type == PeriodTypeDto.MONTHLY) {
-        return this.createAttributeAddressDsmr4Monthly(from, to);
+        return this.createAttributeAddressDsmr4Monthly(
+            from, to, device.isSelectiveAccessPeriodicMeterReadsSupported(), channel);
       } else if (type == PeriodTypeDto.INTERVAL) {
-        return this.createAttributeAddressDsmr4Interval(from, to);
+        return this.createAttributeAddressDsmr4Interval(from, to, channel);
       }
     } else if (protocol == Protocol.SMR_5_0_0 || protocol == Protocol.SMR_5_1) {
       if (type == PeriodTypeDto.DAILY) {
-        return this.createAttributeAddressSmr5Daily(from, to);
+        return this.createAttributeAddressSmr5Daily(from, to, channel);
       } else if (type == PeriodTypeDto.MONTHLY) {
-        return this.createAttributeAddressSmr5Monthly(from, to);
+        return this.createAttributeAddressSmr5Monthly(from, to, channel);
       } else if (type == PeriodTypeDto.INTERVAL) {
-        return this.createAttributeAddressSmr5Interval(from, to);
+        return this.createAttributeAddressSmr5Interval(from, to, channel);
       }
     }
 
@@ -336,51 +375,140 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
             + protocol.getVersion());
   }
 
-  private List<AttributeAddress> getScalerUnitAttributeAddresses(final Protocol protocol) {
-
-    final AttributeAddress attributeAddress;
+  private List<AttributeAddress> getScalerUnitAttributeAddresses(
+      final Protocol protocol, final boolean selectedValuesSupported, final int channel) {
 
     if (protocol == Protocol.DSMR_4_2_2) {
-      attributeAddress =
-          new AttributeAddress(
-              this.CLASS_ID_EXTENDED_REGISTER,
-              this.OBIS_GAS_VALUE_DSMR4,
-              this.ATTR_ID_SCALER_UNIT,
-              null);
+      if (selectedValuesSupported) {
+        return List.of(
+            new AttributeAddress(
+                this.CLASS_ID_EXTENDED_REGISTER,
+                this.getObisCodeForChannel(this.OBIS_GAS_VALUE_DSMR4, channel),
+                this.ATTR_ID_SCALER_UNIT,
+                null));
+      } else {
+        return List.of(
+            new AttributeAddress(
+                this.CLASS_ID_REGISTER,
+                this.OBIS_ACTIVE_ENERGY_IMPORT_RATE_1,
+                this.ATTR_ID_SCALER_UNIT,
+                null),
+            new AttributeAddress(
+                this.CLASS_ID_REGISTER,
+                this.OBIS_ACTIVE_ENERGY_IMPORT_RATE_2,
+                this.ATTR_ID_SCALER_UNIT,
+                null),
+            new AttributeAddress(
+                this.CLASS_ID_REGISTER,
+                this.OBIS_ACTIVE_ENERGY_EXPORT_RATE_1,
+                this.ATTR_ID_SCALER_UNIT,
+                null),
+            new AttributeAddress(
+                this.CLASS_ID_REGISTER,
+                this.OBIS_ACTIVE_ENERGY_EXPORT_RATE_2,
+                this.ATTR_ID_SCALER_UNIT,
+                null),
+            new AttributeAddress(
+                this.CLASS_ID_EXTENDED_REGISTER,
+                this.getObisCodeForChannel(this.OBIS_GAS_VALUE_DSMR4, 1),
+                this.ATTR_ID_SCALER_UNIT,
+                null),
+            new AttributeAddress(
+                this.CLASS_ID_EXTENDED_REGISTER,
+                this.getObisCodeForChannel(this.OBIS_GAS_VALUE_DSMR4, 2),
+                this.ATTR_ID_SCALER_UNIT,
+                null),
+            new AttributeAddress(
+                this.CLASS_ID_EXTENDED_REGISTER,
+                this.getObisCodeForChannel(this.OBIS_GAS_VALUE_DSMR4, 3),
+                this.ATTR_ID_SCALER_UNIT,
+                null),
+            new AttributeAddress(
+                this.CLASS_ID_EXTENDED_REGISTER,
+                this.getObisCodeForChannel(this.OBIS_GAS_VALUE_DSMR4, 4),
+                this.ATTR_ID_SCALER_UNIT,
+                null));
+      }
     } else {
-      attributeAddress =
+      return List.of(
           new AttributeAddress(
               this.CLASS_ID_EXTENDED_REGISTER,
-              this.OBIS_GAS_VALUE_SMR5,
+              this.getObisCodeForChannel(this.OBIS_GAS_VALUE_SMR5, channel),
               this.ATTR_ID_SCALER_UNIT,
-              null);
+              null));
     }
-
-    return Collections.singletonList(attributeAddress);
   }
 
   private void setResponseForProfile(
       final AttributeAddress attributeAddressForProfile,
       final Protocol protocol,
       final PeriodTypeDto type,
-      final boolean useNullData) {
+      final boolean useNullData,
+      final boolean selectedValuesSupported,
+      final int channel) {
 
     // PERIOD 1
 
     final DataObject period1Clock = this.PERIOD_1_CLOCK;
     final DataObject period1Status = DataObject.newUInteger8Data(this.PERIOD1_AMR_STATUS_VALUE);
-    final DataObject period1Value = DataObject.newUInteger32Data(this.PERIOD_1_LONG_VALUE);
     final DataObject period1CaptureTime = DataObject.newDateTimeData(this.PERIOD_1_CAPTURE_TIME);
+    final DataObject period1ValueE = DataObject.newUInteger32Data(this.PERIOD_1_LONG_VALUE_E);
 
     final DataObject periodItem1;
     if (type == PeriodTypeDto.MONTHLY && protocol == Protocol.DSMR_4_2_2) {
-      periodItem1 =
-          DataObject.newStructureData(
-              Arrays.asList(period1Clock, period1Value, period1CaptureTime));
+      if (selectedValuesSupported) {
+        periodItem1 =
+            DataObject.newStructureData(
+                Arrays.asList(
+                    period1Clock,
+                    this.createValue(this.PERIOD_1_LONG_VALUE, channel),
+                    period1CaptureTime));
+      } else {
+        periodItem1 =
+            DataObject.newStructureData(
+                Arrays.asList(
+                    period1Clock,
+                    period1ValueE,
+                    period1ValueE,
+                    period1ValueE,
+                    period1ValueE,
+                    this.createValue(this.PERIOD_1_LONG_VALUE, 1),
+                    period1CaptureTime,
+                    this.createValue(this.PERIOD_1_LONG_VALUE, 2),
+                    period1CaptureTime,
+                    this.createValue(this.PERIOD_1_LONG_VALUE, 3),
+                    period1CaptureTime,
+                    this.createValue(this.PERIOD_1_LONG_VALUE, 4),
+                    period1CaptureTime));
+      }
     } else {
-      periodItem1 =
-          DataObject.newStructureData(
-              Arrays.asList(period1Clock, period1Status, period1Value, period1CaptureTime));
+      if (selectedValuesSupported || type == PeriodTypeDto.INTERVAL) {
+        periodItem1 =
+            DataObject.newStructureData(
+                Arrays.asList(
+                    period1Clock,
+                    period1Status,
+                    this.createValue(this.PERIOD_1_LONG_VALUE, channel),
+                    period1CaptureTime));
+      } else {
+        periodItem1 =
+            DataObject.newStructureData(
+                Arrays.asList(
+                    period1Clock,
+                    period1Status,
+                    period1ValueE,
+                    period1ValueE,
+                    period1ValueE,
+                    period1ValueE,
+                    this.createValue(this.PERIOD_1_LONG_VALUE, 1),
+                    period1CaptureTime,
+                    this.createValue(this.PERIOD_1_LONG_VALUE, 2),
+                    period1CaptureTime,
+                    this.createValue(this.PERIOD_1_LONG_VALUE, 3),
+                    period1CaptureTime,
+                    this.createValue(this.PERIOD_1_LONG_VALUE, 4),
+                    period1CaptureTime));
+      }
     }
 
     // PERIOD 2
@@ -395,18 +523,64 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
       period2CaptureTime = DataObject.newDateTimeData(this.PERIOD_2_CAPTURE_TIME);
     }
     final DataObject period2Status = DataObject.newUInteger8Data(this.PERIOD2_AMR_STATUS_VALUE);
-    final DataObject period2Value = DataObject.newUInteger32Data(this.PERIOD_2_LONG_VALUE);
+    final DataObject period2ValueE = DataObject.newUInteger32Data(this.PERIOD_2_LONG_VALUE_E);
 
     final DataObject periodItem2;
     if (type == PeriodTypeDto.MONTHLY && protocol == Protocol.DSMR_4_2_2) {
       // No status for Monthly values in DSMR4.2.2
-      periodItem2 =
-          DataObject.newStructureData(
-              Arrays.asList(period2Clock, period2Value, period2CaptureTime));
+      if (selectedValuesSupported) {
+        periodItem2 =
+            DataObject.newStructureData(
+                Arrays.asList(
+                    period2Clock,
+                    this.createValue(this.PERIOD_2_LONG_VALUE, channel),
+                    period2CaptureTime));
+      } else {
+        periodItem2 =
+            DataObject.newStructureData(
+                Arrays.asList(
+                    period2Clock,
+                    period2ValueE,
+                    period2ValueE,
+                    period2ValueE,
+                    period2ValueE,
+                    this.createValue(this.PERIOD_2_LONG_VALUE, 1),
+                    period1CaptureTime,
+                    this.createValue(this.PERIOD_2_LONG_VALUE, 2),
+                    period1CaptureTime,
+                    this.createValue(this.PERIOD_2_LONG_VALUE, 3),
+                    period1CaptureTime,
+                    this.createValue(this.PERIOD_2_LONG_VALUE, 4),
+                    period1CaptureTime));
+      }
     } else {
-      periodItem2 =
-          DataObject.newStructureData(
-              Arrays.asList(period2Clock, period2Status, period2Value, period2CaptureTime));
+      if (selectedValuesSupported || type == PeriodTypeDto.INTERVAL) {
+        periodItem2 =
+            DataObject.newStructureData(
+                Arrays.asList(
+                    period2Clock,
+                    period2Status,
+                    this.createValue(this.PERIOD_2_LONG_VALUE, channel),
+                    period2CaptureTime));
+      } else {
+        periodItem2 =
+            DataObject.newStructureData(
+                Arrays.asList(
+                    period2Clock,
+                    period2Status,
+                    period2ValueE,
+                    period2ValueE,
+                    period2ValueE,
+                    period2ValueE,
+                    this.createValue(this.PERIOD_2_LONG_VALUE, 1),
+                    period1CaptureTime,
+                    this.createValue(this.PERIOD_2_LONG_VALUE, 2),
+                    period1CaptureTime,
+                    this.createValue(this.PERIOD_2_LONG_VALUE, 3),
+                    period1CaptureTime,
+                    this.createValue(this.PERIOD_2_LONG_VALUE, 4),
+                    period1CaptureTime));
+      }
     }
 
     // Create returnvalue and set in stub
@@ -461,13 +635,16 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
     }
   }
 
-  private void checkValues(final List<PeriodicMeterReadsGasResponseItemDto> periodicMeterReads) {
+  private void checkValues(
+      final List<PeriodicMeterReadsGasResponseItemDto> periodicMeterReads, final int channel) {
 
     final PeriodicMeterReadsGasResponseItemDto period1 = periodicMeterReads.get(0);
     final PeriodicMeterReadsGasResponseItemDto period2 = periodicMeterReads.get(1);
 
-    assertThat(period1.getConsumption().getValue().longValue()).isEqualTo(this.PERIOD_1_LONG_VALUE);
-    assertThat(period2.getConsumption().getValue().longValue()).isEqualTo(this.PERIOD_2_LONG_VALUE);
+    assertThat(period1.getConsumption().getValue().longValue())
+        .isEqualTo(this.PERIOD_1_LONG_VALUE + channel);
+    assertThat(period2.getConsumption().getValue().longValue())
+        .isEqualTo(this.PERIOD_2_LONG_VALUE + channel);
   }
 
   private void checkAmrStatus(
@@ -492,20 +669,33 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   // DSMR4
 
   private AttributeAddress createAttributeAddressDsmr4Daily(
-      final DataObject from, final DataObject to) {
+      final DataObject from,
+      final DataObject to,
+      final boolean selectiveAccessPeriodicMeterReadsSupported,
+      final int channel) {
     final SelectiveAccessDescription expectedSelectiveAccess =
-        this.createSelectiveAccessDescriptionDsmr4Daily(from, to);
+        this.createSelectiveAccessDescriptionDsmr4Daily(
+            from, to, selectiveAccessPeriodicMeterReadsSupported, channel);
     return new AttributeAddress(
         this.CLASS_ID_PROFILE, this.OBIS_DAILY_DSMR4, this.ATTR_ID_BUFFER, expectedSelectiveAccess);
   }
 
   private SelectiveAccessDescription createSelectiveAccessDescriptionDsmr4Daily(
-      final DataObject from, final DataObject to) {
+      final DataObject from,
+      final DataObject to,
+      final boolean selectiveAccessPeriodicMeterReadsSupported,
+      final int channel) {
 
-    final DataObject selectedValues =
-        DataObject.newArrayData(
-            Arrays.asList(
-                this.CLOCK, this.STATUS, this.GAS_VALUE_DSMR4, this.GAS_CAPTURE_TIME_DSMR4));
+    final List<DataObject> dataObjects =
+        selectiveAccessPeriodicMeterReadsSupported
+            ? Arrays.asList(
+                this.CLOCK,
+                this.STATUS,
+                this.getDataObjectForGasValueDsmr4(channel, this.ATTR_ID_VALUE),
+                this.getDataObjectForGasValueDsmr4(channel, this.ATTR_ID_CAPTURE_TIME))
+            : new ArrayList<>();
+
+    final DataObject selectedValues = DataObject.newArrayData(dataObjects);
 
     final DataObject expectedAccessParam =
         DataObject.newStructureData(Arrays.asList(this.CLOCK, from, to, selectedValues));
@@ -514,9 +704,13 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   }
 
   private AttributeAddress createAttributeAddressDsmr4Monthly(
-      final DataObject from, final DataObject to) {
+      final DataObject from,
+      final DataObject to,
+      final boolean selectiveAccessPeriodicMeterReadsSupported,
+      final int channel) {
     final SelectiveAccessDescription expectedSelectiveAccess =
-        this.createSelectiveAccessDescriptionDsmr4Monthly(from, to);
+        this.createSelectiveAccessDescriptionDsmr4Monthly(
+            from, to, selectiveAccessPeriodicMeterReadsSupported, channel);
     return new AttributeAddress(
         this.CLASS_ID_PROFILE,
         this.OBIS_MONTHLY_DSMR4,
@@ -525,11 +719,20 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   }
 
   private SelectiveAccessDescription createSelectiveAccessDescriptionDsmr4Monthly(
-      final DataObject from, final DataObject to) {
+      final DataObject from,
+      final DataObject to,
+      final boolean selectiveAccessPeriodicMeterReadsSupported,
+      final int channel) {
 
-    final DataObject selectedValues =
-        DataObject.newArrayData(
-            Arrays.asList(this.CLOCK, this.GAS_VALUE_DSMR4, this.GAS_CAPTURE_TIME_DSMR4));
+    final List<DataObject> dataObjects =
+        selectiveAccessPeriodicMeterReadsSupported
+            ? Arrays.asList(
+                this.CLOCK,
+                this.getDataObjectForGasValueDsmr4(channel, this.ATTR_ID_VALUE),
+                this.getDataObjectForGasValueDsmr4(channel, this.ATTR_ID_CAPTURE_TIME))
+            : new ArrayList<>();
+
+    final DataObject selectedValues = DataObject.newArrayData(dataObjects);
 
     final DataObject expectedAccessParam =
         DataObject.newStructureData(Arrays.asList(this.CLOCK, from, to, selectedValues));
@@ -538,12 +741,12 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   }
 
   private AttributeAddress createAttributeAddressDsmr4Interval(
-      final DataObject from, final DataObject to) {
+      final DataObject from, final DataObject to, final int channel) {
     final SelectiveAccessDescription expectedSelectiveAccess =
         this.createSelectiveAccessDescriptionDsmr4Interval(from, to);
     return new AttributeAddress(
         this.CLASS_ID_PROFILE,
-        this.OBIS_INTERVAL_DSMR4,
+        this.getObisCodeForChannel(this.OBIS_INTERVAL_DSMR4, channel),
         this.ATTR_ID_BUFFER,
         expectedSelectiveAccess);
   }
@@ -562,31 +765,34 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   // SMR5
 
   private AttributeAddress createAttributeAddressSmr5Daily(
-      final DataObject from, final DataObject to) {
-    final SelectiveAccessDescription expectedSelectiveAccess =
-        this.createSelectiveAccessDescriptionSmr5(from, to);
-    return new AttributeAddress(
-        this.CLASS_ID_PROFILE, this.OBIS_DAILY_SMR5, this.ATTR_ID_BUFFER, expectedSelectiveAccess);
-  }
-
-  private AttributeAddress createAttributeAddressSmr5Monthly(
-      final DataObject from, final DataObject to) {
+      final DataObject from, final DataObject to, final int channel) {
     final SelectiveAccessDescription expectedSelectiveAccess =
         this.createSelectiveAccessDescriptionSmr5(from, to);
     return new AttributeAddress(
         this.CLASS_ID_PROFILE,
-        this.OBIS_MONTHLY_SMR5,
+        this.getObisCodeForChannel(this.OBIS_DAILY_SMR5, channel),
+        this.ATTR_ID_BUFFER,
+        expectedSelectiveAccess);
+  }
+
+  private AttributeAddress createAttributeAddressSmr5Monthly(
+      final DataObject from, final DataObject to, final int channel) {
+    final SelectiveAccessDescription expectedSelectiveAccess =
+        this.createSelectiveAccessDescriptionSmr5(from, to);
+    return new AttributeAddress(
+        this.CLASS_ID_PROFILE,
+        this.getObisCodeForChannel(this.OBIS_MONTHLY_SMR5, channel),
         this.ATTR_ID_BUFFER,
         expectedSelectiveAccess);
   }
 
   private AttributeAddress createAttributeAddressSmr5Interval(
-      final DataObject from, final DataObject to) {
+      final DataObject from, final DataObject to, final int channel) {
     final SelectiveAccessDescription expectedSelectiveAccess =
         this.createSelectiveAccessDescriptionSmr5(from, to);
     return new AttributeAddress(
         this.CLASS_ID_PROFILE,
-        this.OBIS_INTERVAL_SMR5,
+        this.getObisCodeForChannel(this.OBIS_INTERVAL_SMR5, channel),
         this.ATTR_ID_BUFFER,
         expectedSelectiveAccess);
   }
@@ -600,5 +806,24 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
         DataObject.newStructureData(Arrays.asList(this.CLOCK, from, to, selectedValues));
 
     return new SelectiveAccessDescription(1, expectedAccessParam);
+  }
+
+  private ObisCode getObisCodeForChannel(final String obis, final int channel) {
+    return new ObisCode(obis.replace("<c>", String.valueOf(channel)));
+  }
+
+  private DataObject getDataObjectForGasValueDsmr4(final int channel, final byte attributeId) {
+    return DataObject.newStructureData(
+        Arrays.asList(
+            DataObject.newUInteger16Data(this.CLASS_ID_EXTENDED_REGISTER),
+            DataObject.newOctetStringData(
+                this.getObisCodeForChannel(this.OBIS_GAS_VALUE_DSMR4, channel).bytes()),
+            DataObject.newInteger8Data(attributeId),
+            DataObject.newUInteger16Data(0)));
+  }
+
+  private DataObject createValue(final long value, final int channel) {
+    // Add channel to value to make each value different
+    return DataObject.newUInteger32Data(value + channel);
   }
 }
